@@ -31,6 +31,7 @@ protected:
 	void mouseMoveEvent( QMouseEvent * );
 	void wheelEvent( QWheelEvent * );
 	void enterEvent( QEvent * );
+	void leaveEvent( QEvent * );
 private:
 	int getMousePos( int X );
 
