@@ -1,4 +1,5 @@
-Zmiany w QMPlay2 build 15.06.10:
+Changes in QMPlay2 build 15.06.13:
+	- minor slider fixes,
 
 Zmiany w QMPlay2 build 15.06.06:
 	- większy pasek zmiany rozmiaru okien dla ekranów dotykowych,
